2010-03-02  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/monitor/nagios/stream.py:
	Fix the flumotion-nagios stream command. In Python2.4 the properties of
	the object returned by urlparse.urlparse() cannot be access by name,
	only by index.

2010-03-02  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/test/test_component_httpserver_httpcached_strategy.py:
	Fix tests.

2010-03-02  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Reset ComponentView when performing actions on multiple components.

2010-02-25  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpcached/http_client.py:
	* flumotion/component/misc/httpserver/httpcached/request_manager.py:
	* flumotion/component/misc/httpserver/httpcached/strategy_base.py:
	Added the proxy info in some warning log entries.

2010-02-25  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/ui/Makefile.am:
	Remove ondemandbrowser.py

2010-02-25  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/misc/httpserver/Makefile.am:
	* flumotion/component/misc/httpserver/admin_gtk.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/misc/httpserver/ondemandbrowser.py (added):
	* flumotion/ui/ondemandbrowser.py (deleted):
	Add OndemandBrowser to the httpserver bundle.

2010-02-25  Josep Joan Ribas  <jribas@flumotion.com>

	* data/cortado-template.html:
	Replaced wrong url to get java.

2010-02-25  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/misc/httpserver/admin_gtk.py:
	Disable OndemandBrowser when serving cortado.

2010-02-24  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: xqueralt

	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/componentlist.py:
	* flumotion/admin/gtk/componentview.py:
	Added support in the admin view when multiple components selected.
	* flumotion/component/component.py:
	Added total memory to the component's uiState.